# mrpcp-argos

./: .gitignore  CMakeLists.txt  README.md  cget-requirements.txt  path.txt
controllers/: CMakeLists.txt  cmake_install.cmake
controllers/collision_handling/: CMakeLists.txt  PIDController.cpp  PIDController.h  collision_mqp.cpp  collision_mqp.h
controllers/footbot_mqp/: CMakeLists.txt  footbot_mqp.cpp  footbot_mqp.h  mqp_http_client.cpp  mqp_http_client.h
controllers/footbot_mqp2/: CMakeLists.txt  footbot_mqp2.cpp  footbot_mqp2.h
controllers/footbot_xml/: CMakeLists.txt  footbot_diffusion.cpp  footbot_diffusion.h  footbot_xml.cpp  footbot_xml.h
controllers/kheperaiv_mqp/: CMakeLists.txt  PIDController.cpp  PIDController.h  kheperaiv_mqp.cpp  kheperaiv_mqp.h
controllers/kheperaiv_orca/: CMakeLists.txt  Filter.h  kheperaiv_orca.cpp  kheperaiv_orca.h
controllers/kheperaiv_orca_failure_mqp/: CMakeLists.txt  kheperaiv_orca_failure_mqp.cpp  kheperaiv_orca_failure_mqp.h
controllers/kheperaiv_orca_mqp/: CMakeLists.txt  Filter.cpp  Filter.h  kheperaiv_orca_mqp.cpp  kheperaiv_orca_mqp.h
experiments/: collision_handling.argos  diffusion1.argos  diffusion_1_positioning.argos  mqp1.argos  mqp2.argos  orca-demo.argos  orca_failure_mqp.argos  orca_failure_mqp_vicon.argos  orca_mqp.argos
loop_functions/: CMakeLists.txt
loop_functions/collision_handling_loop/: CMakeLists.txt  collision_handling_loop.cpp  collision_handling_loop.h  data_parsing.cpp  data_parsing.h  mqp_http_client.cpp  mqp_http_client.h  trajectory_qtuser_functions.h
loop_functions/get_initial_solution_mqp/: CMakeLists.txt  get_initial_solution_mqp.cpp  get_initial_solution_mqp.h  mqp_http_client.cpp  mqp_http_client.h  trajectory_qtuser_functions.cpp  trajectory_qtuser_functions.h
loop_functions/get_initial_solution_mqp2/: CMakeLists.txt  get_initial_solution_mqp2.cpp  get_initial_solution_mqp2.h
loop_functions/kheperaiv_orca_failure_mqp_loop/: CMakeLists.txt  kheperaiv_orca_failure_mqp_loop.cpp  kheperaiv_orca_failure_mqp_loop.h  mqp_http_client.cpp  mqp_http_client.h  position_logger.cpp  position_logger.h  qtuser_functions.cpp  qtuser_functions.h
loop_functions/kheperaiv_orca_loop/: CMakeLists.txt  data_parsing.cpp  id_qtuser_functions.cpp  id_qtuser_functions.h  kheperaiv_orca_loop.cpp  kheperaiv_orca_loop.h  mqp_http_client.cpp
loop_functions/kheperaiv_orca_mqp_loop/: CMakeLists.txt  id_qtuser_functions.cpp  id_qtuser_functions.h  kheperaiv_orca_mqp_loop.cpp  kheperaiv_orca_mqp_loop.h  mqp_http_client.h  qtuser_functions.cpp  qtuser_functions.h
loop_functions/master_loop_functions/: CMakeLists.txt  master_loop_functions.cpp  master_loop_functions.h
loop_functions/mqp1_loop_functions/: CMakeLists.txt  mqp1_loop_functions.cpp  mqp1_loop_functions.h
loop_functions/mrpcp_loop_functions/: CMakeLists.txt  mrpcp_loop_functions.cpp  mrpcp_loop_functions.h
milp_scripts/: milp_sending_to_argos.py
