include_directories(${CMAKE_SOURCE_DIR})

# Descend into the get_initial_solution_mqp directory
add_subdirectory(get_initial_solution_mqp)
add_subdirectory(get_initial_solution_mqp2)
add_subdirectory(kheperaiv_orca_loop)
add_subdirectory(collision_handling_loop)
add_subdirectory(kheperaiv_orca_mqp_loop)

add_subdirectory(master_loop_functions)
add_subdirectory(kheperaiv_orca_failure_mqp_loop)
